# axme-cli

./: .gitignore  CHANGELOG.md  README.md  go.mod  go.sum  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
axme_cli/: cli.py  client.py  config.py
cmd/axme/: admin.go  agents_policy.go  agents_receive_override.go  device_login.go  email_login.go  examples.go  examples_scenarios.go  login_test.go  main.go  mesh.go  mesh_test.go  org_receive_policy.go  quota.go  scenarios.go  scenarios_test.go  secrets.go  secrets_test.go  tasks.go  tasks_test.go  update.go
tests/: test_cli.py
