[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axme-cli"
version = "0.1.0"
description = "CLI for Axme Cloud enterprise and portal operations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AxmeAI" }]
dependencies = []

[project.scripts]
axme = "axme_cli.cli:main"

[tool.setuptools]
packages = ["axme_cli"]
